--- a/chatgpt-obsidian.user.css
+++ b/chatgpt-obsidian.user.css
@@ -64,3 +64,7 @@ html[data-chat-theme="purple"] .hover\:text-token-link-hover:hover,
 html[data-chat-theme="purple"] button.behavior-btn.text-token-text-link.entity-underline:hover {
     color: #ab89fa !important;
 }
+
+html[data-chat-theme="purple"] a[data-sidebar-item="true"][href="/"] .header-wordmark > .text-token-text-tertiary {
+    color: #cbb6fc !important;
+}
